<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    tools:context=".sign.SignUpFragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/handshake1"
        android:src="@drawable/header2"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="270dp"
        android:text="@string/let_s_get_you_started"
        android:textColor="#ffffff"
        android:textSize="20sp"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="300dp"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/signUpEmail"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="353dp"
        android:autofillHints=""
        android:background="#ffffff"
        android:drawableStart="@drawable/mail"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/example_mail_com"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:textColor="#FF000000"
        android:textColorHint="#757575"
        tools:ignore="LabelFor,RtlSymmetry" />

    <EditText
        android:id="@+id/signUpPassword"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="428dp"
        android:autofillHints=""
        android:ems="10"
        android:background="#ffffff"
        android:drawableStart="@drawable/lock"
        android:drawablePadding="15dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:textColor="#FF000000"
        android:textColorHint="#757575"
        tools:ignore="LabelFor,RtlSymmetry" />

    <EditText
        android:id="@+id/signUpConfirmPassword"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="503dp"
        android:autofillHints=""
        android:ems="10"
        android:background="#ffffff"
        android:drawableStart="@drawable/lock"
        android:drawablePadding="15dp"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:textColor="#FF000000"
        android:textColorHint="#757575"
        tools:ignore="LabelFor,RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUpButton"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="578dp"
        android:background="#000000"
        android:text="@string/create_new_account"
        android:textColor="#FFFFFF"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/don_t_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="652dp"
        android:text="@string/existing_member"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/goLogin"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:layout_marginStart="240dp"
        android:layout_marginTop="640dp"
        android:background="@android:color/transparent"
        android:text="@string/log_in"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold" />

</FrameLayout>